--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
           <!-- Top slider content -->
           <div class="mu-top-slider-content">
             <span class="mu-slider-small-title">Welcome</span>
-            <h2 class="mu-slider-title">To The OsteriaX</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>           
-            <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a>
+            <h2 class="mu-slider-title">To Yaro Di Haweli</h2>
+            <p>content 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas mollitia soluta aut asperiores unde quo voluptatibus repellat cupiditate assumenda incidunt beatae labore voluptates consectetur qui, natus corporis quos eaque voluptatum?</p>           
+            <!-- <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a> -->
           </div>
           <!-- / Top slider content -->
         </div>
@@ -120,9 +120,11 @@
           <!-- Top slider content -->
           <div class="mu-top-slider-content">
             <span class="mu-slider-small-title">The Elegant</span>
-            <h2 class="mu-slider-title">Italian Restaurant</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>           
-           <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a>
+            <!-- <h2 class="mu-slider-title">Italian Restaurant</h2> -->
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>            -->
+            <!-- <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a> -->
+            <h2 class="mu-slider-title">To Yaro Di Haweli</h2>
+            <p>content 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas mollitia soluta aut asperiores unde quo voluptatibus repellat cupiditate assumenda incidunt beatae labore voluptates consectetur qui, natus corporis quos eaque voluptatum?</p>
           </div>
           <!-- / Top slider content -->
         </div>
@@ -134,9 +136,11 @@
           <!-- Top slider content -->
           <div class="mu-top-slider-content">
             <span class="mu-slider-small-title">Delicious</span>
-            <h2 class="mu-slider-title">Spicy Masalas</h2>
+            <h2 class="mu-slider-title">To Yaro Di Haweli</h2>
+            <p>content 1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas mollitia soluta aut asperiores unde quo voluptatibus repellat cupiditate assumenda incidunt beatae labore voluptates consectetur qui, natus corporis quos eaque voluptatum?</p>
+            <!-- <h2 class="mu-slider-title">Spicy Masalas</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptatem accusamus non quidem, deleniti optio.</p>           
-            <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a>
+            <a href="#mu-reservation" class="mu-readmore-btn mu-reservation-btn">BOOK A TABLE</a> -->
           </div>
           <!-- / Top slider content -->
         </div>
